src/objects/Staff__c.object
<CustomObject>
    <fields>
        <fullName>Benefits_Rate__c</fullName>
        <label>Benefits Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staff</relationshipLabel>
        <relationshipName>Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Staff</relationshipLabel>
        <relationshipName>Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salary_Wage_Rate__c</fullName>
        <label>Salary / Wage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Staff</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Staff Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>